excute error resolve

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<h2 class="title">{{ 'Member Login / Sign In' | translate }}</h2>
-<p class="caption">{{ 'Input Your Accout Information' | translate }}</p>
+<h2 class="title">Member Login / Sign In</h2>
+<p class="caption">Input Your Accout Information</p>
 
-<input type="text" matInput placeholder="{{ 'Login ID' | translate }}">
-<button class="button" (click)="login()"><span>{{ 'Login' | translate }}</span></button>
+<input type="text" matInput placeholder="Login ID">
+<button class="button"><span>Login</span></button>
 <!-- <button class="button" (click)="login()"><span translate>Login</span></button> -->
 
 
