--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<h2 class="title">Member Login / Sign In</h2>
-<p class="caption">Input Your Accout Information</p>
-
-<input type="text" matInput placeholder="Login ID">
-<button class="button"><span>Login</span></button>
-<!-- <button class="button" (click)="login()"><span translate>Login</span></button> -->
-
-
+<router-outlet></router-outlet>
